--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.6",
     "react": "18.2.0",
+    "react-devtools": "^4.27.6",
     "react-native": "0.71.7",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0"
   },
