--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-devtools": "^4.27.6",
     "react-native": "0.71.7",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0"
   },
