--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@testing-library/react-native": "^12.1.2",
     "axios": "^1.3.6",
     "react": "18.2.0",
     "react-devtools": "^4.27.6",
@@ -30,6 +32,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
