update style file

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "testMatch": [
+    "<rootDir>/src/**/**/*.{spec,test}.{js,jsx,ts,tsx}"
+  ]
 }
