--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest --coverage"
+    "test": "jest --coverage --collectCoverageFrom='src/**/*.{ts,jsx,js}'"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.15",
@@ -24,8 +24,10 @@
     "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-transform-react-jsx": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
@@ -42,7 +44,10 @@
     "react-test-renderer": "18.2.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   },
   "testMatch": [
     "<rootDir>/src/**/**/*.{spec,test}.{js,jsx,ts,tsx}"
